SCRUM-76 refactor: 아티스트 상세 조회(getArtistDetails)를 Episode 기반 플랫 구조로 전환